@@ -1,4 +1,4 @@
-﻿html,
+html,
 body {
   margin: 0;
   height: 100%;
