@@ -83,6 +83,7 @@
         <a href='../../class/c3/Plot.Layer.Line.Straight.html#draggable-variable'>draggable</a>
         <a href='../../class/c3/Plot.Layer.Line.Straight.html#vector_options-variable'>vector_options</a>
         <a href='../../class/c3/Plot.Layer.Line.Straight.html#line_options-variable'>line_options</a>
+        <a href='../../class/c3/Plot.Layer.Line.Straight.html#grab_line_options-variable'>grab_line_options</a>
         <a href='../../class/c3/Plot.Layer.Line.Straight.html#label_options-variable'>label_options</a>
         <a href='../../class/c3/Plot.Layer.html#_next_uid-variable'>_next_uid</a>
         <a href='../../class/c3/Plot.Layer.html#data-variable'>data</a>
