@@ -182,6 +182,20 @@ There is one node per data element.  Use this option for animating line movement
 <div class='tags'>
 </div>
   </dd>
+  <dt id='grab_line_options-variable'>
+    grab_line_options
+    =
+  </dt>
+  <dd>
+    <pre><code class='coffeescript'>undefined</code></pre>
+    <div class='docstring'>
+  <p>[<a href='../../class/c3/Selection.Options.html'>c3.Selection.Options</a>] Options for the svg:line lines for hidden lines
+behind each line that is wider and easier for users to interact with
+e.g. for click or drag events.</p>
+</div>
+<div class='tags'>
+</div>
+  </dd>
   <dt id='label_options-variable'>
     label_options
     =
